@@ -4,9 +4,8 @@
 
 GNUPLOT_ZIPFILE=/home/ftp/pub/gretl/winbuild/gp372w32.zip
 
-HOME_WIN32=/home/cottrell/stats/esl/win32
-GTK2DLLS=$HOME_WIN32/dlls/gtk-2.0-dlls.tar.gz
-GTK2MO=$HOME_WIN32/mo
+HOME_WIN32=/home/cottrell/stats/esl/win32/runtime
+GTK2RT=$HOME_WIN32/gtk-2.0-runtime.tar.gz
 
 INNO_EXE="c:/Userdata/Inno Setup 2/ISCC.exe"
 RECODE=recode
@@ -73,11 +72,11 @@ for f in plugins/*.dll ; do
 done
 
 # gtk dlls
-for f in `tar tvfz $GTK2DLLS | grep -v /$ | awk '{ print $NF }'` ; do
+for f in `tar tvfz $GTK2RT | grep -v /$ | awk '{ print $NF }'` ; do
     echo "gretl/$f" >> windist/MANIFEST
 done
 cd windist/gretl 
-tar xvfz $GTK2DLLS
+tar xvfz $GTK2RT
 cd $THISDIR
 
 # auxiliary dlls
@@ -125,8 +124,6 @@ add_file ${TOPDIR}/share/bcih/bcih.idx gretl/db/bcih.idx
 # translations
 for lang in es fr ; do
   add_file mo/$lang.mo gretl/locale/$lang/LC_MESSAGES/gretl.mo
-  add_file $GTK2MO/$lang/LC_MESSAGES/glib20.mo gretl/lib/locale/$lang/LC_MESSAGES/glib20.mo
-  add_file $GTK2MO/$lang/LC_MESSAGES/gtk20.mo gretl/lib/locale/$lang/LC_MESSAGES/gtk20.mo
 done
 
 # NIST test data
