@@ -5,6 +5,8 @@ version 1.0.2
 - make range-mean graph editable via gui
 - fix utf8/character encoding issue with editing gnuplot
   commands and sending the commands to gnuplot
+- fix bug in test for balanced panel and reading of panel
+  structure
 
 11/27/02 version 1.0.1
 - fix to configure script in re. glib-2.0
